solve bug